# homelab-manager

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
adapters/: pyproject.toml
docker/rabbitmq/: docker-compose.yml
domain/: Makefile  README.md  pyproject.toml
external_systems/: pyproject.toml
ports/: README.md  pyproject.toml
ports/tests/: test_truth.py
services/: pyproject.toml
src/: main.py
src/adapters/: README.md
src/adapters/inbound/video/downloader/youtube/yt_dlp/: __init__.py
src/adapters/inbound/video/youtube/downloader/yt_dlp/: __init__.py
src/adapters/inbound/video/youtube/fetcher/yt_dlp/: __init__.py
src/adapters/outbound/command/repository/sqlite/pony_impl/: __init__.py
src/adapters/outbound/communication/message_queue/rabbitmq/pika_impl/: message_consumer.py  message_producer.py
src/adapters/outbound/event/repository/sqlite/pony_impl/: __init__.py
src/configs/: .gitignore  prod.env.example  rabbitmq.py  sqlite.py
src/domain/: .gitignore
src/domain/entity/commands/: generic_command.py
src/domain/entity/commands/video/youtube/: download_youtube_video_from_url_command.py  download_youtube_video_from_url_to_channel_name_dir_command.py  download_youtube_videos_from_txt_file_command.py  download_youtube_videos_from_txt_file_to_channel_name_dir_command.py
src/domain/entity/error/: message_queue.py  video.py
src/domain/entity/events/: generic.py
src/domain/entity/events/video/youtube/: downloaded_youtube_video_event.py  persisted_youtube_video_event.py
src/domain/entity/video/: download_status.py  youtube.py
src/external_systems/: README.md
src/external_systems/commands_handler/generic/: all_commands_persisting_handler.py
src/external_systems/commands_handler/video/download/: utils.py
src/external_systems/commands_handler/video/download/youtube/: download_youtube_video_for_url_command_handler.py  download_youtube_video_from_txt_file_command_handler.py  download_youtube_video_from_txt_file_to_channel_name_dir_command_handler.py  download_youtube_video_from_url_to_channel_name_command_handler_dir.py
src/external_systems/events_handler/generic/: all_events_persisting_handler.py
src/external_systems/events_handler/video/persist/youtube/: downloaded_youtube_video_event_handler.py
src/external_systems/gateway/rest_api/: runner.py
src/external_systems/gateway/rest_api/fast_api_impl/: __init__.py
src/external_systems/gateway/rest_api/fast_api_impl/routers/download/: video.py
src/external_systems/scripts/: run_gateway_server.sh
src/ports/inbound/video/downloader/youtube/: __init__.py
src/ports/inbound/video/youtube/downloader/: __init__.py
src/ports/inbound/video/youtube/fetcher/: __init__.py
src/ports/outbound/command/repository/: __init__.py
src/ports/outbound/communication/message_queue/: message_consumer.py  message_producer.py
src/ports/outbound/event/repository/: __init__.py
src/ports/outbound/video/youtube/repository/: __init__.py
src/services/: README.md
src/services/command/: __init__.py
src/services/communication/message_queue/: __init__.py
src/services/event/: __init__.py
src/services/video/downloader/: __init__.py
src/services/video/youtube/: __init__.py
tests/services/communication/message_queue/rabbitmq/pika_impl/: test_message_communication_service_for_rabbitmq_pika_impl_message_consumer.py  test_message_communication_service_for_rabbitmq_pika_impl_message_producer.py
tests/services/video/downloader/: test_download_youtube_video_from_url.py  test_download_youtube_video_from_url_to_channel_name_dir.py  test_download_youtube_videos_from_txt_file.py  test_download_youtube_videos_from_txt_file_to_channel_name_dir.py
tests/services/video/fetcher/: test_fetch_latest_youtube_videos_for_channel.py  test_fetch_youtube_video_for_url.py
(+16 files in other folders)
